test/errors/007_bad_block_element.eu
# -*- mode: conf -*-

x: __BLOCK([[:x, :y, :extra]])
